--- a/WebContent/lib/css/join.css
+++ b/WebContent/lib/css/join.css
@@ -1,10 +1,6 @@
 @charset "utf-8";
 @import url("/lib/css/base.css");
 
-#header  h1 {
-	margin: auto;
-	padding: 20px 0 40px;
-}
 .search_top span.btn_search input { padding: 10.9px 20px; }
 
 /* join_2.do */
@@ -568,17 +564,23 @@ h4.hs_1 span.cut_1 {padding-left:12px; margin-left:8px; background:url(/images/s
 
 
 /* login */
-.login_wrap {max-width:504px; width: 100%;  padding:80px 0 150px 0; margin:0 auto; box-sizing: border-box; }
+.login_wrap {max-width:504px; width: 100%;  padding: 30px 0 150px 0; margin:0 auto; box-sizing: border-box; }
 .login_tit {
-	font-size: 40px;
+	font-size: 36px;
     font-weight: 600;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+.login_subtit {
+	font-size: 16px;
+    font-weight: 300;
+    margin-bottom: 44px;
     text-align: center;
 }
 
 .l_img {margin-bottom:70px;}
 
-.login_con { max-width:473px; width: 100%;  margin:0 auto; padding: 0 20px; box-sizing: border-box; }
+.login_con { max-width: 336px; width: 100%;  margin:0 auto;  }
 
 .login_box {
 	display: flex;
@@ -591,51 +593,26 @@ h4.hs_1 span.cut_1 {padding-left:12px; margin-left:8px; background:url(/images/s
 
 /* */
 .input_div {
-  position: relative;
-  display: grid;
-  grid-template-columns: 7% 93%;
-  margin: 25px 0;
-  padding: 5px 0;
-  border-bottom: 2px solid #d9d9d9;
+	margin-bottom: 10px;
 }
-.input_div::after,
-.input_div::before {
-    content: '';
-    position: absolute;
-    bottom: -2px;
-    width: 0;
-    height: 2px;
-    background: var(--main-color);
-    transition: .3s;
-}
-.input_div::after { left: 50%; }
-.input_div::before { right: 50%; }
-.input_div.focus .i i { color: var(--main-color); }
-.input_div.focus div h5 {
-	top: -5px;
-    font-size: 15px;
-}
-.input_div.focus::after,
-.input_div.focus::before { width: 50%; }
 
 .input {
-  position: absolute;
   width: 100%;
   height: 100%;
-  top: 0;
-  left: 0;
-  border: none;
-  outline: none;
-  background: none;
-  padding: 0.5rem 0.7rem;
-  font-size: 1.2rem;
+  font-size: 14px;
+  font-weight: 300;
+  padding: 10px 15px;
   color: #555;
+  border: 1px solid #DBDBDB;
+  border-radius: 5px;
+  outline: none;
 }
 .input:focus { outline: none; }
 
-.input_div div { 
+.input_div input { 
 	position: relative;
-    height: 45px;
+    height: 40px;
+    box-sizing: border-box;
 }
 .input_div div h5 {
   position: absolute;
@@ -658,9 +635,6 @@ i {
   transition: .3s; 
 }
 
-.one { margin-top: 0; }
- .two { margin-bottom: 4px; }
- 
 /* */
 
 .l_left {
@@ -683,27 +657,31 @@ i {
 }
 .login_btn {
 	width: 100%;
-	font-size: 20px;
-	font-weight: 600;
-	padding: 20px;
+	font-size: 16px;
+	font-weight: 500;
+	padding: 15px;
 	color: #fff;
 	background: var(--main-color);
 	cursor: pointer;
-	border-radius: 10px;
+	border-radius: 4px;
 	transition: background-color .3s ease;
 }
 .login_btn:hover { background: var(--hover-color); }
 
 .btn_lnk {
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
+	align-items: center;
+}
+.btn_lnk ul {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
 	align-items: center;
 }
 .btn_lnk ul li {
-	float:left; 
-	margin:0 20px 10px 0; 
 	font-size:14px;
-	font-weight:bold;
+	font-weight: 300;
 	cursor: pointer;
 }
 .btn_lnk ul li.first {
@@ -711,8 +689,9 @@ i {
 }
 .btn_lnk ul li.first label {
 	display: flex;
-	column-gap: 5px;
+	column-gap: 7px;
 	align-items: center;
+	font-weight: 500;
 }
 .btn_lnk ul li.first input { display: none; margin-top:-2px;}
 .btn_lnk ul li.first .icon {
@@ -729,18 +708,19 @@ i {
   position: absolute;
   top: 1px;
   left: 5px;
-  width: 5px;
-  height: 11px;
-  border-right: 2px solid #fff;
-  border-bottom: 2px solid #fff;
+  width: 4px;
+  height: 8px;
+  border-right: 4px solid var(--sub-color);
+  border-bottom: 4px solid var(--sub-color);
+  border-radius: 2px;
   transform: rotate(45deg) scale(0);
   transition: all 0.3s ease;
   transition-delay: 0.15s;
   opacity: 0;
 }
 .btn_lnk ul li.first input:checked ~ .icon {
-  border-color: transparent;
-  background: var(--main-color);
+  border-color: 1px solid #D4D4D4;
+  background: transparent;
   animation: jelly 0.6s ease;
 }
 .btn_lnk ul li.first input:checked ~ .icon::after {
@@ -748,6 +728,34 @@ i {
   opacity: 1;
   transform: rotate(45deg) scale(1);
 }
+
+.join_banner {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	width: 100%;
+	padding: 0 60px;
+	background: #F6F6F6;
+	box-sizing: border-box;
+}
+.join_banner .text_wrap h5 {
+	font-size: 20px;
+	font-weight: 600;
+	margin-bottom: 6px;
+}
+.join_banner .text_wrap p {
+	display: flex;
+	align-items: center;
+	column-gap: 30px;
+	font-size: 16px;
+	font-weight: 300;
+}
+.join_banner .text_wrap p a {
+	display: flex;
+	align-items: center;
+	column-gap: 10px;
+}
+
 
 @keyframes jelly {
   0% { transform: scale(1, 1); }
@@ -763,14 +771,9 @@ i {
 .btn_lnk ul li.last {margin:0;}
 .btn_lnk ul li a {
 	font-size:14px; 
-	font-weight:bold; 
-	padding:10px;  
+	font-weight: 300; 
+	padding:10px 0 10px 10px; 
 }
-
-/* .login_tab h4#tabNavTitle0101 a {z-index:4; background:url(/images/login/log_tab1_off.png) no-repeat;} */
-/* .login_tab h4#tabNavTitle0101.on a {background:url(/images/login/log_tab1_on.png) no-repeat;} */
-/* .login_tab h4#tabNavTitle0102 a {background:url(/images/login/log_tab2_off.png) no-repeat;} */
-/* .login_tab h4#tabNavTitle0102.on a {background:url(/images/login/log_tab2_on.png) no-repeat;} */
 
 .login_tab h4#tabNavTitle0101 a::before {
 	content: '()';
