--- a/WebContent/lib/css/base.css
+++ b/WebContent/lib/css/base.css
@@ -1,4 +1,5 @@
 @charset "utf-8";
+@import url('./font.css');
 
 body, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, form, fieldset, p, button, select, input, textarea, th, td {margin:0; padding:0;}
 body {height:100%; font-family: 'S-Core'; font-size:12px; color:#1a1e26; }
@@ -22,7 +23,6 @@ body {height:100%; font-family: 'S-Core'; font-size:12px; color:#1a1e26; }
 }
 
 img {border:none; vertical-align:top;}
-
 button {
 	font-family: 'Spoqa Han Sans Neo', 'sans-serif';
 	border: none;
@@ -50,12 +50,14 @@ select {
   -moz-border-radius: 0;
   -o-border-radius: 0;
   border-radius: 0;
+  font-size: 12px;
+  color: #989898;
   background-image: url("/images/common/select.png");
   background-repeat: no-repeat;
-  background-position: right 0px center;
+  background-position: right 10px center;
   cursor: pointer;
   background-color:#fff;
-  padding: 5px;
+  padding: 5px 10px;
   border: 1px solid #bfbfbf;
   box-sizing: border-box;
 }
@@ -83,10 +85,10 @@ a:active {color:#1a1e26 ;}
 a:hover {color:#2c2c2c; }
 
 :root {
-	--main-color: #8D95AC;
-	--sub-color: #AAC4D9;
-	--hover-color: #8089A2;
+	--main-color: #303030;
+	--sub-color: #00ABF7;
+	--hover-color: #232222;
 	--light-gray: #E4E7EB;
-	--main-text: #1F261F;
+	--main-text: #1A1E26;
 	--border-color: #707070;
 }
