--- a/WebContent/lib/css/common.css
+++ b/WebContent/lib/css/common.css
@@ -208,11 +208,10 @@ body.active { overflow-y: hidden; }
 .top_logo {
 	text-align: center;
 	padding: 10px 0;
+	margin-left: 200px;
 	box-sizing: border-box;
 }
-.top_logo img {
-	width: 100px;
-}
+.top_logo a { display: block; }
 
 .h_contents {
 	width: 100%;
@@ -247,21 +246,21 @@ body.active { overflow-y: hidden; }
 .util_nav ul li a {
 	font-size: 12px;
 	font-weight: 300;
-	padding: 10px 16px 10px 0;
+	padding: 10px 20px 10px 0;
 	transition: all .3s ease;
 }
 
 .util_nav ul li a:hover {  font-weight: 400;  }
 .util_nav ul li:last-child a {padding-right: 0; }
 .util_nav ul .cart_item a { position: relative;  }
-.util_nav ul .cart_item a i { color: #48e17b; }
+.util_nav ul .cart_item a i { font-size: 0; }
 .util_nav ul .cart_item a .cart_count {
 	position: absolute;
 	top: 46%;
-	left: 5px;
+	left: 2px;
 	font-size: 10px;
 	font-weight: 400;
-	color: #fff;
+	color: var(--sub-color);
 	transform: translateY(-50%);
 	z-index: 1;
 }
@@ -272,7 +271,7 @@ body.active { overflow-y: hidden; }
 /*#question {position:absolute; top:19px; left:38px; width:200px; height:150px; background:#fcf9a6; border:1px solid #ddd; z-index:999;}*/
 .search_top { display: flex; overflow:hidden;}
 .search_top input.main_search {
-	width: 100px;
+	width: 124px;
 	 height: 16px;
 	 font-size:14px;
 	 padding: 5px 20px 5px 10px; 
@@ -284,7 +283,7 @@ body.active { overflow-y: hidden; }
 .search_top input:focus { outline: none; }
 .search_top input.main_search:focus-visihble { border: 1px solid var(--main-color); }
 .search_box {
-	margin-right: 30px;
+	margin-right: 40px;
 }
 .search_top span.search {
 	float:left;
@@ -333,6 +332,7 @@ body.active { overflow-y: hidden; }
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	column-gap: 6px;
 	font-size: 14px;
 	font-weight: 300;
 	padding: 0 0 0 20px;
@@ -341,8 +341,6 @@ body.active { overflow-y: hidden; }
 	transition: color .3s ease;
 }
 .cart i {
-	font-size: 18px;
-	font-weight: 300;
 	color: var(--text-color);
 }
 .cart:hover {
@@ -384,7 +382,7 @@ body.active { overflow-y: hidden; }
 .all_menu i {
 	font-size: 14px;
 	font-weight: 300;
-	padding-right: 5px;
+	padding-right: 6px;
 	color: var(--main-text);
 }
 
@@ -579,6 +577,7 @@ ul.roll_img img {width:784px; height:355px;}
 	background:#fff;
 	transform: translateX(-50%);
 	z-index:2000; 
+	box-shadow: 0 3px 6px rgb(0 0 0 / 16%);
 	transition: left .3s ease, max-width .3s ease;
 }
 /* .all_menu_box.active { */
@@ -620,20 +619,17 @@ ul.roll_img img {width:784px; height:355px;}
 	position: relative;
 	display: flex;
     flex-direction: column;
+    border-top: 4px solid var(--sub-color);
 /* 	height:373px;  */
 }
 .viewcate {
-/* 	float:left;  */
-/* 	width:136px;  */
-/* 	height:373px;  */
-/* 	border-right:1px solid #c0c0c0;  */
     display: flex;
-	background-color: white;
+	background-color: #fff;
+	border-bottom: 1px solid #E6E6E6;
 }
-.viewcate:last-child { border-bottom: 1px solid var(--border-color); }
+.viewcate:last-child { border: none; }
 .viewcate h3 { 
 	width: 130px; 
-	border: 1px solid var(--border-color);
 	border-bottom: 0px;
 	box-sizing: border-box;
 	transition: all .3s esae;
@@ -645,8 +641,8 @@ ul.roll_img img {width:784px; height:355px;}
 	text-align: center;
 	padding: 10px;
 	font-size:12px;
-	font-weight: 400;
-	color: #979C96;
+	font-weight: 300;
+	color: #646464;
 	transition: all .3s esae;
 	box-sizing: border-box;
 }
@@ -707,9 +703,9 @@ ul.roll_img img {width:784px; height:355px;}
 
 /* md */
 
-.md {max-width:1400px; width: 100%;  padding:21px 0 100px 0; margin:0 auto;}
+.md {max-width:1400px; width: 100%;  padding:0 0 100px 0; margin:0 auto;}
 .md h3 {height:16px;}
-p.mt_img {border:1px solid #c5c5c5;}
+p.mt_img { background: #fff; border:1px solid #c5c5c5;}
 p.mt_img a {
 	display: block;
 	width: 100%;
@@ -717,13 +713,14 @@ p.mt_img a {
 	padding: 5px;
 	box-sizing: border-box;
 }
-p.mt_img img { display: block; margin: auto; }
+p.mt_img img { display: block; margin: auto;  }
 .mt_btn { display: flex; align-items: center; justify-content: space-between; width: 100%;}
 .mt_btn a {
 	width: calc(100% / 3);
 	font-size: 10px;
 	text-align: center;
 	padding: 10px;
+	background: #fff;
 	box-sizing: border-box;
 	border: 1px solid #c5c5c5;
 	border-top: none;
@@ -745,7 +742,7 @@ p.mt_img img { display: block; margin: auto; }
 .md_list ul li {
 	width: calc(100% / 5.5);
 	padding:20px 0;
-	background: #fff;
+	background: #fbfbfb;
 	box-sizing: border-box;
 }
 
@@ -755,6 +752,7 @@ p.mt_img img { display: block; margin: auto; }
 
 .md_bottom {margin-top:10px; color:#454545;}
 .md_bottom p {overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
+.md_bottom p strong { font-weight: 500; }
 .md_bottom p.mb_1 {letter-spacing:-1px; line-height:17px;}
 p.mb_2 {overflow:hidden; margin:1px 0 2px 0; letter-spacing:-1px; line-height:18px;}
 span.mb_2_1 {float:left; margin-right:19px; font-size:11px; }
@@ -886,7 +884,7 @@ ul.sub_list_1 li {color:#e85946; background:url(/images/sub_2/table_list_1.gif) 
 	 overflow:hidden;
 	 box-sizing: border-box;
 }
-#footer .f_logo {float:left; margin:40px 20px 0 0;}
+#footer .f_logo {float:left; margin:40px 60px 0 0;}
 #footer .copy {float:left;  padding:16px 0 0 0; line-height:16px;}
 #footer .c_top {overflow:hidden;}
 #footer .c_top ul {
@@ -895,10 +893,17 @@ ul.sub_list_1 li {color:#e85946; background:url(/images/sub_2/table_list_1.gif) 
 	flex-wrap: wrap;
 }
 
-#footer .c_top ul li a {display:block; height:14px; padding:4px 12px 5px 0px; font-size: 13px; font-weight: 500; letter-spacing:-1px;}
+#footer .c_top ul li a {
+	display:block; 
+	padding:4px 20px 5px 0px; 
+	font-size: 12px; 
+	font-weight: 500; 
+	letter-spacing:-1px;
+	box-sizing: border-box;
+}
 #footer .c_bottom {margin-top:7px;}
-#footer .c_bottom p { line-height: 2; color:#555;}
-#footer .c_bottom p span { font-size: 14px; font-weight: 500; }
+#footer .c_bottom p { line-height: 2; color:#9f9f9f;}
+#footer .c_bottom p span { font-size: 12px; font-weight: 500; }
 #footer p.top a {
 	position:absolute; 
 	top:0px; 
