--- a/WebContent/lib/css/sub.css
+++ b/WebContent/lib/css/sub.css
@@ -30,7 +30,7 @@
 .sl_wrap .sl_l h3 {
 	font-size: 40px;
 	font-weight: 600;
-	padding: 70px 0;
+	padding: 0 0 20px 0;
     box-sizing: border-box;
 }
 .sl_wrap .sl_l p {float:left; margin:11px 0 0 28px;}
@@ -73,55 +73,6 @@
     padding: 0 20px 100px 20px;
     box-sizing: border-box;
 }
-
-.product_container {
-	display: flex;
-	
-}
-.product_container .side_menu {
-	width: 100%;
-	max-width: 200px;
-	height: 220px;
-	margin: 60px 60px 0 0;
-	border: 1px solid #9f9f9f;
-}
-.product_container .side_menu h6 {
-	font-size: 18px;
-	font-weight: 400;
-	padding: 6px 0 6px 20px;
-	margin-bottom: 20px;
-	color: #fff;
-	background: var(--main-color);
-	box-sizing: border-box;
-}
-.product_container .side_menu ul {
-	display: flex;
-	flex-direction: column;
-	row-gap: 20px;
-	padding-left: 20px;
-	box-sizing: border-box;
-}
-.product_container .side_menu ul li {
-	font-size: 14px;
-    font-weight: 300;
-}
-.product_container .side_menu ul li a {
-	position: relative;
-}
-.product_container .side_menu ul li a::after {
-	content: '';
-	position: absolute;
-	bottom: -3px;
-	left: 50%;
-	width: 0%;
-	height: 1px;
-	background: var(--main-color);
-	transform: translateX(-50%);
-    -webkit-transform: translateX(-50%);
-	transition: width .3s ease-in-out;
-}
-.product_container .side_menu ul li:hover a::after { width: 100%; }
-
 
 .condition_wrap {
 	background: #E8EBE8;
@@ -171,7 +122,7 @@
 .sub_contents {padding:0 0 70px 0;}
 .menu_info_wrap {
 	margin-bottom: 60px;
-	background: var(--main-color);
+	background: #F1F1F1;
 }
 .menu_info_wrap .menu_info {
 	max-width: 1400px;
@@ -179,18 +130,24 @@
 	font-weight: 300;
 	padding: 12px 20px;
 	margin: auto;
-	color: #fff;
+	color: #A8A8A8;
 	box-sizing: border-box;
 }
 .sub_contents_img {padding:20px 0 40px 0;}
 
-.sc_top {overflow:hidden; padding-bottom:15px;}
+.sc_top {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 28px;
+	overflow:hidden; 
+}
 .sc_top ul.sc_tab {
 	display: inline-flex;
 	column-gap: 20px;
 	margin:19px 0 0 8px;
 }
-.sc_top ul.sc_tab li {float:left; position: relative; }
+.sc_top ul.sc_tab li { position: relative; }
 .sc_top ul.sc_tab li::after {
 	content: ''; 
 	display: block;
@@ -205,13 +162,13 @@
 .sc_top ul.sc_tab li.last::after { display: none; }
 .sc_top ul.sc_tab li a {
 	font-size:12px; 
-	font-weight:bold; 
+	font-weight: 300; 
 	letter-spacing:-1px;
-	color: #A4A3A3;
+	color: #808080;
 }
 .sc_top ul.sc_tab li a.on {color: var(--main-text);}
 
-.sc_top .sc_type {float:right; margin-top:18px;}
+.sc_top .sc_type {margin-top:18px;}
 .sc_top .sc_type span {margin-left:1px;}
 .sc_top .sc_type select {width:71px;}
 
@@ -259,28 +216,28 @@ ul.tabs{
 
 ul.tabs li {  
   	width: 50%;
-  	font-size: 18px;
+  	font-size: 16px;
+  	font-weight: 600;
   	text-align: center;
-	padding: 25px 0;
-	color: #707070;
-	background: #E8EBE8;
+	padding: 15px 0;
+	color: #ACACAC;
+	background: #fff;
 	cursor: pointer;
 	box-sizing: border-box;
-	border: 1px solid var(--border-color);
+	border-top: 1px solid #9E9E9E;
+	border-bottom: 1px solid #DFDFDF;
 }
-ul.tabs li:first-child { border-right: none; }
 
 ul.tabs li.current{
 	background: #fff;
 	color: var(--text-color);
-	border-bottom: none;
+	border-bottom: 1px solid var(--main-color);
 }
 
 .tab-content{
    display: none;
-	background: #fff;
-	padding: 20px;
-	border: 1px solid var(--border-color); 
+	background: #fbfbfb;
+	padding: 30px;
 	border-top: none;
 }
 
@@ -301,21 +258,21 @@ ul.tabs li.current{
 .content_container .tab-content .tit {
 	font-size: 20px;
 	margin-bottom: 30px;
-	padding-left: 20px;
 }
 
 .content_container .guide_content {
-	margin-bottom: 40px;
+	margin-bottom: 30px;
 	box-sizing: border-box;
 }
 .content_container .guide_content h3 {
-	font-size: 20px;
-	margin-bottom: 20px;
+	font-size: 16px;
+	font-weight: 600;
+	margin-bottom: 15px;
 }
 .content_container .guide_content ul li {
 	font-size: 16px;
-	line-height: 1.4;
-	padding: 0 0 10px 10px;
+	font-weight: 300;
+	line-height: 1.6;
 }
 
 
@@ -365,7 +322,7 @@ ul.tabs li.current{
 
 
 .details_title {
-	margin-bottom: 45px; 
+	margin-bottom: 30px; 
 	font-size: 36px; 
 	font-weight: 700;
 	letter-spacing:-1px;
@@ -381,8 +338,8 @@ ul.tabs li.current{
 .details_1 .d_info_btn {
 	display: flex;
 	justify-content: space-between;
-	column-gap: 20px;
-	margin: 100px 0;
+	column-gap: 14px;
+	margin: 40px 0 80px;
 }
 .details_1 .d_info_btn a {
 	flex-grow: 1;
@@ -405,7 +362,7 @@ ul.tabs li.current{
 	color: #ff5151;
 }
 .details_1 .d_info_btn .buy_btn {
-	padding: 25px 120px;
+	padding: 18px 120px;
 	color: #fff;
 	background: var(--main-color);
 	transition: all .3s ease;
@@ -413,9 +370,9 @@ ul.tabs li.current{
 .details_1 .d_info_btn .buy_btn:hover { color: #fff; background: var(--hover-color); }
 .details_1 .d_info_btn .cart_btn {
 	flex-grow: 0.5;
-	padding: 25px 120px;
+	padding: 18px 120px;
 	color: var(--main-color);
-	border: 1px solid var(--main-color);
+	border: 1px solid #ebebeb;
 }
 .details_1 .d_info_btn a.sns_type img {vertical-align:bottom;}
 
@@ -527,20 +484,23 @@ p.d_tab_roll_btng7{position: static;; bottom:0px; left:0px; width:100%; text-ali
 /* 다른상품 */
 .other_slide {
 	margin-bottom: 100px;
-	border-top: solid 1px var(--border-color);
+	border-top: solid 1px #e8e8e8;
 	overflow: hidden;	
 }
 .other_slide h6 {
-	font-size: 16px;
-	padding: 30px 0;
-	color: #707070;
+	font-size: 22px;
+	padding: 60px 0 30px;
 	box-sizing: border-box;
 }
-.other_slide .item { width: calc(100% / 4); }
-.other_slide .item p {
-	margin-top: 10px;
+
+.other_slide .item a { 
+	display: block; 
+	text-align: center;
+	margin-bottom: 15px; 
+	padding: 35px 40px;
+	border: 1px solid #e2e2e2;
+	box-sizing: border-box;
 }
-.other_slide .item a { display: block; }
 .other_slide .item .pro_tit {
 	font-size: 14px;
 	font-weight: 300;
@@ -563,7 +523,6 @@ p.d_tab_roll_btng7{position: static;; bottom:0px; left:0px; width:100%; text-ali
   #galleryWrap > .galleryView { height: 200px; margin-bottom: 40px; }
 }
 @media screen and (max-width: 786px) {
-	.product_container .side_menu { width: 220px; }
 	
 	#galleryWrap > .galleryView {
 		min-width: 100%;
@@ -575,17 +534,7 @@ p.d_tab_roll_btng7{position: static;; bottom:0px; left:0px; width:100%; text-ali
 	ul.tabs li { font-size: 14px; }
 	.details_title { font-size: 24px; }
 	.sl_wrap .sl_l h3 { font-size: 30px; padding: 10px 0; }
-	.product_container {  flex-direction: column; }
-	.product_container .side_menu {
-    	width: 100%;
-    	max-width: 100%;
-    	height: auto;
-    	margin: 30px 0;
-	}
-	.product_container .side_menu ul {
-		padding-bottom: 20px;
-		box-sizing: border-box;
-	}
+
 /* 	#galleryWrap > .galleryView { height: 480px; } */
 	ul.sl_type_2 li { width: 100%; height: 100%; }
 	.details_1 .d_info_btn .buy_btn { padding: 25px 100px; }
