--- a/WebContent/lib/css/article.css
+++ b/WebContent/lib/css/article.css
@@ -9,11 +9,23 @@ table {word-break:break-all;}
 }
 
 /* list_style_1 */
-
-.list_top {overflow:hidden; margin:40px 0 10px 0;}
+.list_top {
+    display: flex;
+	justify-content: space-between;
+    align-items: center;
+	margin:40px 0 30px 0;
+	overflow:hidden; 
+}
 p.select_box {float:right;}
-p.hit {float:left; margin-top:14px;}
-p.hit b {color:#ef5e50;}
+p.hit {
+	font-size: 16px;
+	font-weight: 300;
+	color: #202020;
+}
+p.hit b {
+	font-size: 18px;
+	font-weight: 500;
+}
 p.hit span {padding:0 7px 0 12px; background:url(/images/article/hit_cut.gif) no-repeat left 0px;}
 p.hit span.first {padding:0 7px 0 0; background:none;}
 p.hit span b.c1 {color:#2e9dbb;}
@@ -21,16 +33,15 @@ p.hit span b.c2 {color:#f38f00;}
 p.hit span b.c3 {color:#5ca400;}
 p.hit span a.h_btn img {margin:-2px 0 0 4px;}
 
-.list_style_1 {table-layout:fixed; width:100%; border-top:2px solid var(--main-color);}
+.list_style_1 {table-layout:fixed; width:100%; border-top:1px solid var(--min-color);}
 .list_style_1 tr.lately td {background:#fffcfc; border-bottom:1px solid #aeaeae;}
 .list_style_1 tr.lately td.title {font-weight:bold;}
 .list_style_1 th {
-	font-size: 16px;
-	font-weight: 500;
-	padding: 20px 0; 
-	color: #707070; 
-	border-top:1px solid var(--main-color); 
-	border-bottom:1px solid var(--main-color); 
+	font-size: 14px;
+	font-weight: 400;
+	padding: 15px 0; 
+	border-top:1px solid var(--main-text); 
+	border-bottom:1px solid #D4D4D4; 
 }
 .list_style_1 td {
 	font-size: 14px;
@@ -46,8 +57,31 @@ p.hit span a.h_btn img {margin:-2px 0 0 4px;}
 .list_style_1 td.title {text-align:left; padding:13px 0 13px 13px;}
 .list_style_1 td.l_t1 {font-weight:bold;}
 
-/* photo_view */
+.qu_list thead tr th:first-child {
+	width: 80px;
+}
+.qu_list thead tr th:nth-child(2) { width: 100%; max-width: 150px; }
+.qu_list thead tr th:nth-child(3) { width: 120px; }
+.qu_list thead tr th:nth-child(4) { width: 120px; }
+.qu_list thead tr th:last-child {
+	width: 100px;
+}
 
+/* 답변상태 */
+.ans_status {
+	font-size: 12px;
+	font-weight: 500;
+	padding: 6px 12px;
+	color: #fff;
+	border-radius: 3px;
+	box-sizing: border-box;
+}
+.gray { background: #AAAAAA; }
+.black { background: #303030; }
+.blue  { background: #00ABF7; }
+
+
+/* photo_view */
 .photo_view{overflow:hidden; border-top:2px solid #d9d9d9; border-bottom:1px solid #d9d9d9; padding:0px 0 20px 24px;}
 .photo_view ul{float:left; margin-right:35px; margin-top:30px;}
 .photo_view ul li img{border:1px solid #d9d9d9; width:172px; height:118px;}
@@ -55,28 +89,120 @@ p.hit span a.h_btn img {margin:-2px 0 0 4px;}
 .photo_view ul li.photo_d{margin-top:5px; text-align:center;}
 .photo_view ul li.photo_t a{font-weight:bold; font-size:14px;}
 
+/* notice view */
+.notice_view_wrap .notice_info {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	border-top: 1px solid var(--main-text);
+}
+.notice_view_wrap .notice_info > li {
+	font-size: 14px;
+	font-weight: 500;
+	padding: 0 15px;
+	box-sizing: border-box;
+}
+.notice_view_wrap .notice_info > li.content_tit {
+	overflow:hidden;
+	text-overflow:ellipsis;
+	white-space:nowrap;
+}
+.notice_view_wrap .notice_info .right_con li .first {
+	display: inline-block;
+	width: 70px;
+	font-size: 14px;
+	font-weight: 300;
+	padding: 14px;
+	margin-right: 14px;
+	background: #F8F8F8;
+	box-sizing: border-box;
+}
+.notice_view_wrap .notice_info .right_con li {
+	font-size: 14px;
+	font-weight: 300;
+}
+.notice_view_wrap .notice_info .right_con ul {
+	display: flex;
+	column-gap: 40px;
+}
+.notice_view_wrap .content_box {
+	height: 100%;
+	min-height: 240px;
+	font-size: 15px;
+	font-weight: 300;
+	line-height: 1.5;
+	padding: 14px;
+	border-top: 1px solid #D4D4D4;
+	border-bottom: 1px solid #D4D4D4;
+	box-sizing: border-box;
+}
+.notice_view_wrap .file_wrap { 
+	margin-bottom: 40px;
+	border-bottom: 1px solid #d4d4d4; 
+}
+.notice_view_wrap .file_wrap span {
+	display: inline-block;
+	font-size: 14px;
+	font-weight: 300;
+	padding: 14px;
+	margin-right: 10px;
+	background: #F8F8F8;
+	box-sizing: border-box;
+}
+.view_prev_next ul li {
+	font-size: 14px;
+	border: 1px solid #d4d4d4;
+}
+.view_prev_next ul li:first-child { border-bottom: none; }
+.view_prev_next ul li span  {
+	display: inline-block;
+	font-size: 14px;
+	font-weight: 500;
+	padding: 15px 40px;
+	margin-right: 33px;
+	background: #F8F8F8;
+	box-sizing: border-box;
+}
+.view_prev_next ul li > a {
+	padding: 10px 0;
+}
+
+.notice_view_wrap .btn_box {
+	text-align: center;
+	margin: 40px 0 50px;
+}
+.notice_view_wrap .btn_box a {
+	display: block;
+	width: 190px;
+	height: 50px;
+	line-height: 50px;
+	font-size: 16px;
+	font-weight: 500;
+	margin: auto;
+	border: 1px solid #E2E2E2;
+	border-radius: 9px;
+}
 
 /* view_style_1 */
-
-.view_style_1 {table-layout:fixed; width:100%; border-top:2px solid var(--main-color);}
+.view_style_1 {table-layout:fixed; width:100%; border-top: 1px solid var(--main-text);}
 .view_style_1 thead th {
 	font-size: 15px;
 /* 	background:#fafafa;  */
 	border-bottom:1px solid #e3e3e3; 
 }
 .view_style_1 thead td {
-	font-size: 15px;
+	font-size: 14px;
 	font-weight: 500;
 /* 	background:#fafafa;  */
-	border-bottom:1px solid #e3e3e3; 
+	border-bottom:1px solid #D4D4D4; 
 }
 .view_style_1 thead td.title {text-align:left;}
-.view_style_1 th {font-size: 15px; padding:13px 0 12px 0; border-bottom:1px solid #e3e3e3; }
+.view_style_1 th {font-size: 15px; padding:13px 0 12px 0; border-bottom:1px solid #D4D4D4; }
 .view_style_1 td {
 	font-size: 15px;
 	font-weight: 500;
 	padding:13px 0 12px 0; 
-	border-bottom:1px solid #e3e3e3;
+	border-bottom:1px solid #D4D4D4;
 }
 .view_style_1 td span {
 	font-size: 12px;
@@ -89,14 +215,17 @@ p.hit span a.h_btn img {margin:-2px 0 0 4px;}
 .view_style_1 td span.state_2 { background: #74BDCB; }
 .view_style_1 td span.state_3 { background: #81B622; }
 
-.view_style_1 td.title {text-align:left;}
+.view_style_1 td.title {
+	text-align:left;
+	padding-left: 15px;
+}
 .view_style_1 td.view_text {
 	padding: 25px 70px; 
 	line-height:22px; 
 	border-bottom:1px solid var(--main-color);
 }
 
-.view_s1 {margin-top: 80px;}
+/* .view_s1 {margin-top: 80px;} */
 
 h4.first {margin-top:27px;}
 h4.view_type1 {
@@ -118,11 +247,43 @@ h4.view_type2 {height:20px; padding-left:25px; margin-bottom:8px; color:#e95744;
     gap: 10px 5px;
 	margin: 45px 0; 
 }
+.qu_mi_btn {
+	display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+	margin: 30px 0 50px; 
+}
+.qu_mi_btn a {
+	display: block;
+	width: 100px;
+	height: 40px;
+	line-height: 40px;
+	text-align: center;
+	font-size: 12px;
+	font-weight: 400;
+	color: #fff;
+	background: #808080;
+	box-sizing: border-box;
+	border-radius: 7px;
+	transition: background-color .3s ease;
+}
+.qu_mi_btn a.clear_btn {
+	color: #272727;
+	background: #fff;
+	border: 1px solid #D8D8D8;
+}
+.qu_btn a {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 5px;
+}
 .vr_btn.mr { margin: 50px 0; }
 .vr_btn a,
 .check_btn {
-	font-size: 16px;
-	font-weight: 600;
+	font-size: 12px;
+	font-weight: 500;
 	padding: 15px 60px !important;
 	color: #fff;
 	background: var(--main-color);
@@ -132,12 +293,6 @@ h4.view_type2 {height:20px; padding-left:25px; margin-bottom:8px; color:#e95744;
 }
 .vr_btn a:hover,
 .check_btn:hover { background: var(--hover-color); }
-.vr_btn a.clear_btn {
-	margin-right: 5px;
-	color: var(--main-color);
-	background: #fff;
-	border: 1px solid var(--main-color);
-}
 .check_btn {
 	padding: 15px 76px;
 }
@@ -149,7 +304,12 @@ h4.view_type2 {height:20px; padding-left:25px; margin-bottom:8px; color:#e95744;
 .part_answer td.pa_main {padding:18px 16px 20px 16px; line-height:22px;}
 */
 
-p.pa_guide {margin:8px 0 0 10px; color:#757575;}
+p.pa_guide {
+	font-size: 12px;
+	font-weight: 300;
+	color: #B4B4B4;
+	margin: 15px 0 63px;
+}
 
 .view_top {overflow:hidden; margin:36px 0 10px 0;} 
 .view_top p.hit {float:left; margin-top:22px;}
@@ -187,6 +347,7 @@ p.pa_guide {margin:8px 0 0 10px; color:#757575;}
 	font-size: 12px;
 	padding: 8px 10px;
 	background: #E8EBE8;
+	border-radius: 4px;
 	box-sizing: border-box;
 	transition: background-color .3s ease;
 }
@@ -214,17 +375,20 @@ li.comm_2 .comm_text {padding:0 0 0 18px;}
 .area_box .coment_wrap textarea {
 	flex-grow: 2;	
 	width: 100%;
+	height: 58px;
 	padding: 15px;
 	resize: none;
+	border: 1px solid #E5E5E5;
 	box-sizing: border-box;
 }
 .area_box .coment_wrap .comm_btn {
-	width: 200px;
+	width: 78px;
+	height: 58px;
 	font-size: 14px;
 	text-align: center;
-	line-height: 60px;
 	color: #fff;
 	background: var(--main-color);
+	border-radius: 4px;
 	box-sizing: border-box;
 }
 .comm_btn {
@@ -357,19 +521,31 @@ li.comm_2 .comm_text {padding:0 0 0 18px;}
 .cart_style_1 {
 	width:100%; 
 	min-width: 600px;
-	border-top:2px solid var(--main-color);
+	border-top: 1px solid var(--main-text);
 }
 
-.cart_style_1 th {padding:15px 0; border-top:1px solid var(--main-color); border-bottom:1px solid var(--main-color);}
+.cart_style_1 th {
+	font-size: 14px;
+	font-weight: 400;
+	padding:14px 0;     
+	border-right:1px solid #E9E9E9;
+	border-bottom:1px solid #E9E9E9;
+	box-sizing: border-box;
+}
+.cart_style_1 th:last-child { border-right: none; }
 .cart_style_1 td {
-	height: 170px;
 	padding:15px 0;
 	text-align:center; 
 	border-right:1px solid #e3e3e3; 
-	border-bottom:1px solid #b9b9b9;
+	border-bottom:1px solid #e3e3e3;
 	box-sizing: border-box;
 }
-.cart_style_1 td.cart_main {text-align:left; padding:15px 8px;}
+.cart_style_1 th:first-child { width: 80px; }
+.cart_style_1 th:nth-child(2) { width: 100%; }
+.cart_style_1 th:nth-child(3) { width: 100px; }
+.cart_style_1 th:nth-child(4) { width: 150px; }
+.cart_style_1 th:nth-child(5) { width: 100px; }
+.cart_style_1 td.cart_main {text-align:left; padding:15px 30px;}
 .cart_style_1 td.total {border-right:none; font-size:16px; font-weight:bold; color:#353535;}
 .cart_style_1 td.cart_img { width: 320px; height: 200px;  }
 
@@ -449,7 +625,6 @@ td.cart_main .product_box {
 .sub_table_1 table td .color_2 {color:#e85946; padding-bottom:10px;}
 .sub_table_1 table td input.ws_1 {width: 8%;  text-align: center; }
 .sub_table_1 table td input.ws_2 {width:395px;}
-.sub_table_1 table td input.ws_3 {}
 .sub_table_1 table td input.ws_4 {width:100%;}
 .sub_table_1 table td label { display: inline-flex; column-gap: 5px; font-size:11px; color:#888; margin-left:10px;}
 .sub_table_1 table td span.c1 {color:#e85946;}
@@ -535,8 +710,54 @@ td.cart_main .product_box {
 .sub_list_style_1 td.lh_style_1 {line-height:16px;}
 .sub_list_style_1 td.btn_type p {margin-bottom:3px;}
 
-.table_container {
-	overflow-x: auto;
+/* checkbox */
+.cart_style_1 td label,
+.product_btn label {
+	display: flex;
+	column-gap: 7px;
+	align-items: center;
+	justify-content: center;
+	font-weight: 500;
+}
+.cart_style_1 td input,
+.product_btn input { display: none; margin-top:-2px;}
+.cart_style_1 td .icon,
+.product_btn .icon {
+  display: block;
+  position: relative;
+  width: 16px;
+  height: 16px;
+  border: 1px solid #c8ccd4;
+  border-radius: 5px;
+  transition: background 0.1 ease;
+}
+.cart_style_1 td .icon::after,
+.product_btn .icon::after {
+  content: '';
+  position: absolute;
+  top: 1px;
+  left: 5px;
+  width: 4px;
+  height: 8px;
+  border-right: 4px solid var(--sub-color);
+  border-bottom: 4px solid var(--sub-color);
+  border-radius: 2px;
+  transform: rotate(45deg) scale(0);
+  transition: all 0.3s ease;
+  transition-delay: 0.15s;
+  opacity: 0;
+}
+.cart_style_1 td input:checked ~ .icon,
+.product_btn input:cheked ~ .icon {
+  border-color: 1px solid #D4D4D4;
+  background: transparent;
+  animation: jelly 0.6s ease;
+}
+.cart_style_1 td input:checked ~ .icon::after,
+.product_btn input:checked ~ .icon::after {
+  content: '';
+  opacity: 1;
+  transform: rotate(45deg) scale(1);
 }
 
 /* details_style_1 */
@@ -738,8 +959,12 @@ td.cart_main .product_box {
 }
 
 /* 주문/배송조회 */
-p.none_img {padding:30px 0;}
-p.none_text {font-size:16px; font-weight:bold;}
+p.none_img {padding:30px 0 20px;}
+p.none_text {
+	font-size: 14px;
+	font-weight: 300;
+	color: #E2E2E2;
+}
 
 .refunds_style_1 td select.select_1 {width:30%;}
 .refunds_style_1 td input.input_1  {width:40%;}
@@ -806,7 +1031,7 @@ p.color_1 {padding:15px 0 8px 0; color:#5686bd; background:url(/images/sub_2/pay
 	 font-size:12px; ;
 	 background: #fff;
 	 text-decoration: none;
-	 border: 1px solid #dbdbdb;
+	 border-radius: 50%;
 	 box-sizing: border-box;
 	 transition: all .3s ease-in-out;
 }
@@ -822,49 +1047,93 @@ p.color_1 {padding:15px 0 8px 0; color:#5686bd; background:url(/images/sub_2/pay
     text-decoration: none;
     box-sizing: border-box;
 }
+.paging span a.prev { margin-right: 20px; }
+.paging span a.next { margin-left: 20px; }
 /* .paging span a.p_last {width:32px; padding:6px 0 0 1px; margin:0 0 0 5px; border:none; background:none; font-size:11px;} */
-.paging span a:hover {color:#fff; background: var(--main-color); letter-spacing:-1px;}
-.paging span b a {color:#fff; background: var(--main-color); }
+/* .paging span a:hover {color:#fff;  background: var(--sub-color); } */
+.paging span b a {color: var(--sub-color); border: 1px solid #D2D2D2; }
 .paging span b a:hover {letter-spacing:0px;}
 
-.bottom_search {
-	clear:both; 
-	text-align:center; 
-	margin:33px 0 0 0; 
-	border:solid 1px #c6c6c6; 
-	background:#f1f1f1; 
-	vertical-align:middle; 
-	padding:10px 0 10px 0;
+
+.top_search {
+	width: 100%;
+	max-width: 520px;
+    text-align: right;
 }
-.bottom_search select.select_1 {width:96px;}
-.bottom_search .search_vd {
-	font-size: 14px;
-	padding: 4px 20px;
+.top_search select.select_1 { 
+	width: 100%; 
+	max-width: 110px; 
+	height: 38px;
+	margin-right: 5px;
+	color: var(--text-color);
+	border:1px solid #D8D8D8;
+}
+.top_search .search_vd {
+	font-size: 12px;
+	font-weight: 400;
+	padding: 12px 17.5px;
 	color: #fff;
 	background: var(--main-color);
 	border: none;
 	cursor: pointer;
 }
-.bottom_search img {vertical-align:middle;}
-.bottom_search input.input_2 {width:284px; padding:6px 0 6px 5px; border:1px solid #b5b5b5;}
+.top_search img {vertical-align:middle;}
+.top_search input.input_2 {
+	width: 100%;
+	max-width: 330px;
+	height: 100%;
+	padding: 9px 12px; 
+	margin-right: 5px;
+	border:1px solid #D8D8D8;
+	box-sizing: border-box;
+}
+.top_search input.input_2:focus { outline: none; }
 
 
 @media screen and (max-width: 1140px) {
 	.sub_contents { width: 100%; }
 	.list_item_wrap .item_wrap {
     	width: 100%;
-    	flex-direction: column;
+/*     	flex-direction: column; */
 	}
 	.list_item_wrap .item_wrap .item_list { 
-		width: 100%; 
-		justify-content: space-between;
+		width: calc((100% / 2) - 27px);
+/* 		justify-content: space-between; */
 	}
 }
 
 
 @media screen and (max-width: 768px) {
+	.table_container { overflow-x: auto; }
+	.title_rocation {
+    	flex-direction: column;
+    	align-items: flex-start;
+    	gap: 10px;
+	}
+	.notice_view_wrap .notice_info .right_con ul { flex-direction: column; }
+	.notice_view_wrap .notice_info > li.content_tit { max-width: 140px; }
+
+	.qu_list thead tr th:first-child {
+		width: 60px;
+	}
+	.qu_list thead tr th:nth-child(3) { width: 80px; }
+	.qu_list thead tr th:nth-child(4) { width: 80px; }
+	.qu_list thead tr th:last-child { width: 80px; }
+
+	.list_top {
+    	justify-content: flex-start;
+    	align-items: flex-start;
+    	flex-direction: column;
+    	gap: 15px;
+	}
+	.top_search {
+		max-width: 100%;
+		text-align: left;
+	}
+	
+	
 	.cart_style_1 td.cart_img { display: table-cell; }
-	.bottom_search input.input_2 { width :40%; }
+	.top_search input.input_2 { width :40%; }
 	.b_none {
 		display: flex;
    		 justify-content: center;
@@ -883,9 +1152,33 @@ p.color_1 {padding:15px 0 8px 0; color:#5686bd; background:url(/images/sub_2/pay
 	.item_wrap .item_list .list_info { width :100%; height: 120px; padding: 20px; border-top: none;  }
 }
 
+
 @media screen and (max-width: 480px) {
+	.title_rocation > div {
+    	flex-direction: column;
+    	align-items: flex-start;
+    	gap: 0px;
+	}
+	.notice_view_wrap .notice_info > li.content_tit { max-width: 100px; }
+	.qu_list thead tr th:first-child { width: 40px; }
+	.qu_list thead tr th:last-child { width: 60px; }
+	.ans_status {
+    	font-size: 10px;
+   		 padding: 6px;
+	}
+	
+	
+	.list_item_wrap .item_wrap {
+    	flex-direction: column;
+    	gap: 20px;
+	}
+	.list_item_wrap .item_wrap .item_list { 
+		width: 100%;
+		justify-content: space-between;
+		margin-bottom: 0;
+	}
 	.detail_content ul li:first-child { max-width: 50px; }
-.vr_btn a.clear_btn { margin-right: 0px; }
+	.vr_btn a.clear_btn { margin-right: 0px; }
 	.list_style_1 th { font-size: 14px; }
 	.sub_table_1 table td input.ws_2 {width: 100%;}
 	.pay_btn {
